<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kollol.multiplicationtable.MainActivity"
    android:background="@drawable/blackboard">


    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/welcomeString"
        android:textColor="#000"
        android:textSize="26sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="119dp"
        android:text="@string/expectedNumberAsking"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="16sp"
        android:id="@+id/text2"
        tools:ignore="UnknownId" />

    <EditText
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="9"
        android:inputType="number"
        android:background="@drawable/edit_text_corner" />

    <Button
        android:id="@+id/submit"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_below="@+id/edit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="@string/submit"
        android:background="@drawable/shape" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:text="@string/Copyringt"
        android:textColor="#000"
        android:textSize="10sp"
        android:textStyle="bold" />

</RelativeLayout>
