<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kollol.multiplicationtable.MainPage"
    android:background="@drawable/blackboard">


    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/welcomeString"
        android:textColor="#000"
        android:textSize="26sp"
        android:textStyle="bold"/>

    <ScrollView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignStart="@+id/textWelcome"
        android:layout_centerVertical="true"
        android:id="@+id/scrollView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/display"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#fff"
                android:textSize="20sp"
                android:layout_marginLeft="45dp"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_below="@+id/scrollView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/newInsert"
        android:background="@drawable/shape">


    </Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:text="@string/Copyringt"
        android:textColor="#000"
        android:textSize="10sp"
        android:textStyle="bold"
        android:id="@+id/textView" />


</RelativeLayout>
